Add targer="_blank" to links on contact

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -18,7 +18,7 @@ block content
                 .row
                   .col-xs-12.col-md-8.col-md-offset-2
                     h2.category__header Contact
-                    p All the code is available on #[a(href="https://github.com/switowski/deploystack") GitHub] and it's under the #[a(href="https://github.com/switowski" target="_blank") MIT License]. If you have any questions or comments, you can #[a(href="https://github.com/switowski/deploystack/issues") create an issue on GitHub], so other people can join the conversation. If you don't have a GitHub account, don't know how to create an issue or just don't think that it's something that has to be discussed publicly, just drop me an email:&nbsp;
+                    p All the code is available on #[a(href="https://github.com/switowski/deploystack" target="_blank") GitHub] and it's under the #[a(href="https://github.com/switowski" target="_blank") MIT License]. If you have any questions or comments, you can #[a(href="https://github.com/switowski/deploystack/issues" target="_blank") create an issue on GitHub], so other people can join the conversation. If you don't have a GitHub account, don't know how to create an issue or just don't think that it's something that has to be discussed publicly, just drop me an email:&nbsp;
                       span.email-address #[strong info](at)#[strong deploystack](dot)#[strong io].
             section.subscribe.background-inverse.background-inverse--blue
               .container
