Add favicon, robots.txt and metadata description

--- a/views/home.pug
+++ b/views/home.pug
@@ -6,7 +6,7 @@ block content
       .row
         .hero__box
           .hero__image.hidden-xs.col-sm-12.text-center
-            img(src="/img/rocket.svg")
+            img(src="/img/rocket.svg" alt="rocket flying out of the monitor")
           .hero__text.col-sm-12.text-center
             h1 DeployStack
             p.hero__lead Curated list of tools to make launching websites easier.
