--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,10 @@ html
     meta(charset='utf-8')
     meta(http-equiv='x-ua-compatible', content='ie=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='description' content='Curated list of tools to make launching websites easier')
     title= title
+    //- Favicon
+    link(rel="apple-touch-icon" href="apple-touch-icon.png")
     //- Fonts and icons
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,500italic,700,700italic|Material+Icons')
     //- CSS
