--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,15 +1,15 @@
 doctype html
-html
+html(lang="en")
   head
     meta(charset='utf-8')
     meta(http-equiv='x-ua-compatible', content='ie=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    meta(name='description' content='Curated list of tools to make launching websites easier')
+    meta(name='description' content='Curated list of tools for launching websites - hosting, domains, web analytics')
     title= title
     //- Favicon
     link(rel="apple-touch-icon" href="apple-touch-icon.png")
     //- Fonts and icons
-    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,500italic,700,700italic|Material+Icons')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,500italic,700,700italic%7CMaterial+Icons')
     //- CSS
     link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='/css/material-kit.min.css')
