--- a/views/home.pug
+++ b/views/home.pug
@@ -19,7 +19,7 @@ block content
                 .row
                   .col-sm-12
                     h2.category__header Hosting
-                    p Your website needs to have home, preferably somewhere in the cloud.<br>
+                    p Your website needs a home, preferably somewhere in the cloud.<br>
                       | Check what options you have for different amount of monthly fee (starting from the free option).<br>
                       | #[a(target="_blank", href="/faq#hosting") Learn more] on why hosting in the cloud is a good solution or what parameters are important.
                 .row.u-mt-medium.text-center
@@ -41,7 +41,7 @@ block content
                     h2.category__header Domain Name
                     p Your website needs a URL, so people can visit it.<br>
                       | Check how much different domains cost (the common ones like #[em .com] but also the unusual ones like #[em .pizza]).<br>
-                      | #[a(target="_blank", href="/faq#domain") Learn about] what can you do without a domain or what's the difference between different domain providing companies.
+                      | #[a(target="_blank", href="/faq#domain") Learn about] what happens if you don't have a domain or what's the difference between different domain providers.
                 include includes/home/domain-table
             section.analytics.category
               .container
