--- a/views/home.pug
+++ b/views/home.pug
@@ -21,7 +21,7 @@ block content
                     h2.category__header Hosting
                     p Your website needs a home, preferably somewhere in the cloud.<br>
                       | Check what options you have for different amount of monthly fee (starting from the free option).<br>
-                      | #[a(target="_blank", href="/faq#hosting") Learn more] on why hosting in the cloud is a good solution or what parameters are important.
+                      | #[a(href="/faq#hosting") Learn more] on why hosting in the cloud is a good solution or what parameters are important.
                 .row.u-mt-medium.text-center
                   .col-sm-12
                     p Display price:
@@ -41,7 +41,7 @@ block content
                     h2.category__header Domain Name
                     p Your website needs a URL, so people can visit it.<br>
                       | Check how much different domains cost (the common ones like #[em .com] but also the unusual ones like #[em .pizza]).<br>
-                      | #[a(target="_blank", href="/faq#domain") Learn about] what happens if you don't have a domain or what's the difference between different domain providers.
+                      | #[a(href="/faq#domain") Learn about] what happens if you don't have a domain or what's the difference between different domain providers.
                 include includes/home/domain-table
             section.analytics.category
               .container
@@ -49,7 +49,7 @@ block content
                   .col-xs-12.col-sm-6
                     h2.category__header Web analytics
                     p Web analytics tools allow to see how users are interacting with your website. Starting from which browser or device is the most popular, what age are your visitors or how did they find your website, up to the heat maps showing what users clicked or how they moved the mouse.<br>
-                      | For most cases I would recommend using the #[a(href='https://www.google.com/analytics/') Google Analytics ] - it's free but packed with features. If you are concerned about the privacy, you can use #[a(href='https://piwik.org/') Piwik ] - an open source tool, that you can host yourself. Finally, if you have a marketing team that needs more specific reports, there are many advanced, paid solutions (no recommendation here, as everything depends on your specific use case).
+                      | For most cases I would recommend using the #[a(target="_blank", href='https://www.google.com/analytics/') Google Analytics ] - it's free but packed with features. If you are concerned about the privacy, you can use #[a(target="_blank", href='https://piwik.org/') Piwik ] - an open source tool, that you can host yourself. Finally, if you have a marketing team that needs more specific reports, there are many advanced, paid solutions (no recommendation here, as everything depends on your specific use case).
                   .col-xs-12.col-sm-6
                     img.analytics-dashboard-img.img-rounded.img-responsive.img-raised(alt="Google analytics dashboard" src="/img/google_analytics_1x.jpg " srcset="/img/google_analytics_2x.jpg 2x")
             section.subscribe.background-inverse.background-inverse--blue
