Add FB Open Graph metadata

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,12 @@ html(lang="en")
     meta(http-equiv='x-ua-compatible', content='ie=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='description' content='Curated list of tools for launching websites - hosting, domains, web analytics')
+    //- Facebook Open Graph metadata
+    meta(property='og:url' content='https://deploystack.io/')
+    meta(property='og:type' content='website')
+    meta(property='og:title' content='deploystack.io')
+    meta(property='og:description' content='Curated list of tools for launching websites. Check how to find the best hosting, domain and other tools for your website.')
+    meta(property='og:image' content='https://deploystack.io/img/fb_og_img.png')
     title= title
     //- Favicon
     link(rel="apple-touch-icon" href="apple-touch-icon.png")
