--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,6 +11,13 @@ html(lang="en")
     meta(property='og:title' content='deploystack.io')
     meta(property='og:description' content='Curated list of tools for launching websites. Check how to find the best hosting, domain and other tools for your website.')
     meta(property='og:image' content='https://deploystack.io/img/fb_og_img.png')
+    //- Twitter Card metadata
+    meta(name='twitter:card' content='summary_large_image')
+    meta(name='twitter:site' content='@SebaWitowski')
+    meta(name='twitter:creator' content='@SebaWitowski')
+    meta(name='twitter:title' content='deploystack.io')
+    meta(name='twitter:description' content='Curated list of tools for launching websites. Check how to find the best hosting, domain and other tools for your website.')
+    meta(name='twitter:image' content='https://deploystack.io/img/twitter_card_img.png')
     title= title
     //- Favicon
     link(rel="apple-touch-icon" href="apple-touch-icon.png")
