Small text change

--- a/views/home.pug
+++ b/views/home.pug
@@ -40,7 +40,7 @@ block content
                   .col-sm-12
                     h2.category__header Domain Name
                     p Your website needs a URL, so people can visit it.<br>
-                      | Check how much different domains cost (the common ones like #[em .com] but also the unusual ones like #[em .pizza]).<br>
+                      | Check how much different domains cost per year (the common ones like #[em .com] but also the unusual ones like #[em .pizza]).<br>
                       | #[a(href="/faq#domain") Learn about] what happens if you don't have a domain or what's the difference between different domain providers.
                 include includes/home/domain-table
             section.analytics.category
