Renamed google_analytics image to stats
* Otherwise the image is blocked by the addblock.

--- a/views/home.pug
+++ b/views/home.pug
@@ -51,7 +51,7 @@ block content
                     p Web analytics tools allow to see how users are interacting with your website. Starting from which browser or device is the most popular, what age are your visitors or how did they find your website, up to the heat maps showing what users clicked or how they moved the mouse.<br>
                       | For most cases I would recommend using the #[a(target="_blank", href='https://www.google.com/analytics/') Google Analytics ] - it's free but packed with features. If you are concerned about the privacy, you can use #[a(target="_blank", href='https://piwik.org/') Piwik ] - an open source tool, that you can host yourself. Finally, if you have a marketing team that needs more specific reports, there are many advanced, paid solutions (no recommendation here, as everything depends on your specific use case).
                   .col-xs-12.col-sm-6
-                    img.analytics-dashboard-img.img-rounded.img-responsive.img-raised(alt="Google analytics dashboard" src="/img/google_analytics_1x.jpg " srcset="/img/google_analytics_2x.jpg 2x")
+                    img.analytics-dashboard-img.img-rounded.img-responsive.img-raised(alt="Google analytics dashboard" src="/img/stats_1x.jpg " srcset="/img/stats_2x.jpg 2x")
             section.subscribe.background-inverse.background-inverse--blue
               .container
                 .row
