--- a/views/home.pug
+++ b/views/home.pug
@@ -12,73 +12,72 @@ block content
             p.hero__lead Curated list of tools to make launching websites easier.
   main
     .main.main-raised
-        .row.text-center
-          .col-sm-12
-            section.hosting.category
-              .container
-                .row
-                  .col-sm-12
-                    h2.category__header Hosting
-                    p Your website needs a home, preferably somewhere in the cloud.<br>
-                      | Check what options you have for different amount of monthly fee (starting from the free option).<br>
-                      | #[a(href="/faq#hosting") Learn more] on why hosting in the cloud is a good solution or what parameters are important.
-                .row.u-mt-medium.text-center
-                  .col-sm-12
-                    p Display price:
-                    .togglebutton
-                      label
-                        span.js-switch-label.js-switch-label--alternative Per hour&nbsp;
-                        input.js-price-switch(type="checkbox" checked="" data-target="#hosting-price")
-                        span.js-switch-label.js-switch-label--normal.js-switch-label--active Per month
-                .row.u-mt-medium
-                  .col-xs-12
-                    a.anchor--hidden#hosting-table
-                    include includes/home/hosting-table
-            section.domain.category.background-inverse
-              .container
-                .row
-                  .col-sm-12
-                    h2.category__header Domain Name
-                    p Your website needs a URL, so people can visit it.<br>
-                      | Check how much different domains cost per year (the common ones like #[em .com] but also the unusual ones like #[em .pizza]).<br>
-                      | #[a(href="/faq#domain") Learn about] what happens if you don't have a domain or what's the difference between different domain providers.
-                include includes/home/domain-table
-            section.analytics.category
-              .container
-                .row.u-mb-medium
-                  .col-xs-12.col-sm-6
-                    h2.category__header Web analytics
-                    p Web analytics tools allow to see how users are interacting with your website. Starting from which browser or device is the most popular, what age are your visitors or how did they find your website, up to the heat maps showing what users clicked or how they moved the mouse.<br>
-                      | For most cases I would recommend using the #[a(target="_blank", href='https://www.google.com/analytics/') Google Analytics ] - it's free but packed with features. If you are concerned about the privacy, you can use #[a(target="_blank", href='https://piwik.org/') Piwik ] - an open source tool, that you can host yourself. Finally, if you have a marketing team that needs more specific reports, there are many advanced, paid solutions (no recommendation here, as everything depends on your specific use case).
-                  .col-xs-12.col-sm-6
-                    img.analytics-dashboard-img.img-rounded.img-responsive.img-raised(alt="Google analytics dashboard" src="/img/stats_1x.jpg" srcset="/img/stats_1x.jpg 1x, /img/stats_2x.jpg 2x")
-            section.monitoring.category.background-inverse.background-inverse--dark-purple
-              .container
-                .row
-                  .col-sm-12
-                    h2.category__header Monitoring
-                    p You don't need to worry if your website is still working when you sleep.<br>
-                      | There are automatic tools that will check it and notify you when something is wrong (website is down or gives unexpected errors).<br>
-                      | Check out the best #[strong free] uptime monitors.
-                include includes/home/monitoring-table
-            section.ssl.category
-              .container
-                .row.u-mb-medium
-                  .col-xs-12.col-sm-6
-                    img.analytics-dashboard-img.img-rounded.img-responsive.img-raised(alt="Google analytics dashboard" src="/img/letsencrypt_1x.jpg" srcset="/img/letsencrypt_1x.jpg 1x, /img/letsencrypt_2x.jpg 2x")
-                  .col-xs-12.col-sm-6
-                    h2.category__header SSL certificate
-                    p For a long time, the only way to get an SSL (or TLS) certificate was to pay 30$ or more per year. Fortunately, since December 2015, the Internet Security Research Group (ISRG) sponsored by many companies created the #[a(target="_blank", href='https://letsencrypt.org/') Let's Encrypt ] project and now everyone can get SSL certificates for #[strong free]. Go to the #[a(target="_blank", href='https://letsencrypt.org/') Let's Encrypt website ] and check how to install the certificate (they have #[a(target="_blank", href='https://certbot.eff.org/') instructions ] for different operating systems and web servers) or if you are using Ubuntu, check the more detailed, step-by-step tutorials from DigitalOcean (for #[a(target="_blank", href='https://www.digitalocean.com/community/tutorials/how-to-secure-apache-with-let-s-encrypt-on-ubuntu-16-04') Apache ] or #[a(target="_blank", href='https://www.digitalocean.com/community/tutorials/how-to-secure-nginx-with-let-s-encrypt-on-ubuntu-16-04') Nginx ]).
-            section.subscribe.background-inverse.background-inverse--blue
-              .container
-                .row
-                  .col-md-8.col-md-offset-2
-                    h3.subscribe__header Subscribe for updates
-                    p.subscribe__description This website will be expanded with new tools and the existing information will be updated (with even better services).<br>
-                      | Join the newsletter and get informed about any major updates (no spam!).
-                .row.text-center
-                  .col-md-6.col-md-offset-3
-                    include includes/signup
+        .text-center
+          section.hosting.category
+            .container
+              .row
+                .col-sm-12
+                  h2.category__header Hosting
+                  p Your website needs a home, preferably somewhere in the cloud.<br>
+                    | Check what options you have for different amount of monthly fee (starting from the free option).<br>
+                    | #[a(href="/faq#hosting") Learn more] on why hosting in the cloud is a good solution or what parameters are important.
+              .row.u-mt-medium.text-center
+                .col-sm-12
+                  p Display price:
+                  .togglebutton
+                    label
+                      span.js-switch-label.js-switch-label--alternative Per hour&nbsp;
+                      input.js-price-switch(type="checkbox" checked="" data-target="#hosting-price")
+                      span.js-switch-label.js-switch-label--normal.js-switch-label--active Per month
+              .row.u-mt-medium
+                .col-xs-12
+                  a.anchor--hidden#hosting-table
+                  include includes/home/hosting-table
+          section.domain.category.background-inverse
+            .container
+              .row
+                .col-sm-12
+                  h2.category__header Domain Name
+                  p Your website needs a URL, so people can visit it.<br>
+                    | Check how much different domains cost per year (the common ones like #[em .com] but also the unusual ones like #[em .pizza]).<br>
+                    | #[a(href="/faq#domain") Learn about] what happens if you don't have a domain or what's the difference between different domain providers.
+              include includes/home/domain-table
+          section.analytics.category
+            .container
+              .row.u-mb-medium
+                .col-xs-12.col-sm-6
+                  h2.category__header Web analytics
+                  p Web analytics tools allow to see how users are interacting with your website. Starting from which browser or device is the most popular, what age are your visitors or how did they find your website, up to the heat maps showing what users clicked or how they moved the mouse.<br>
+                    | For most cases I would recommend using the #[a(target="_blank", href='https://www.google.com/analytics/') Google Analytics ] - it's free but packed with features. If you are concerned about the privacy, you can use #[a(target="_blank", href='https://piwik.org/') Piwik ] - an open source tool, that you can host yourself. Finally, if you have a marketing team that needs more specific reports, there are many advanced, paid solutions (no recommendation here, as everything depends on your specific use case).
+                .col-xs-12.col-sm-6
+                  img.analytics-dashboard-img.img-rounded.img-responsive.img-raised(alt="Google analytics dashboard" src="/img/stats_1x.jpg" srcset="/img/stats_1x.jpg 1x, /img/stats_2x.jpg 2x")
+          section.monitoring.category.background-inverse.background-inverse--dark-purple
+            .container
+              .row
+                .col-sm-12
+                  h2.category__header Monitoring
+                  p You don't need to worry if your website is still working when you sleep.<br>
+                    | There are automatic tools that will check it and notify you when something is wrong (website is down or gives unexpected errors).<br>
+                    | Check out the best #[strong free] uptime monitors.
+              include includes/home/monitoring-table
+          section.ssl.category
+            .container
+              .row.u-mb-medium
+                .col-xs-12.col-sm-6
+                  img.analytics-dashboard-img.img-rounded.img-responsive.img-raised(alt="Google analytics dashboard" src="/img/letsencrypt_1x.jpg" srcset="/img/letsencrypt_1x.jpg 1x, /img/letsencrypt_2x.jpg 2x")
+                .col-xs-12.col-sm-6
+                  h2.category__header SSL certificate
+                  p For a long time, the only way to get an SSL (or TLS) certificate was to pay 30$ or more per year. Fortunately, since December 2015, the Internet Security Research Group (ISRG) sponsored by many companies created the #[a(target="_blank", href='https://letsencrypt.org/') Let's Encrypt ] project and now everyone can get SSL certificates for #[strong free]. Go to the #[a(target="_blank", href='https://letsencrypt.org/') Let's Encrypt website ] and check how to install the certificate (they have #[a(target="_blank", href='https://certbot.eff.org/') instructions ] for different operating systems and web servers) or if you are using Ubuntu, check the more detailed, step-by-step tutorials from DigitalOcean (for #[a(target="_blank", href='https://www.digitalocean.com/community/tutorials/how-to-secure-apache-with-let-s-encrypt-on-ubuntu-16-04') Apache ] or #[a(target="_blank", href='https://www.digitalocean.com/community/tutorials/how-to-secure-nginx-with-let-s-encrypt-on-ubuntu-16-04') Nginx ]).
+          section.subscribe.background-inverse.background-inverse--blue
+            .container
+              .row
+                .col-md-8.col-md-offset-2
+                  h3.subscribe__header Subscribe for updates
+                  p.subscribe__description This website will be expanded with new tools and the existing information will be updated (with even better services).<br>
+                    | Join the newsletter and get informed about any major updates (no spam!).
+              .row.text-center
+                .col-md-6.col-md-offset-3
+                  include includes/signup
           //- End of main-raised
   //- Modals
   section.modals
