Minor CSS fixes

--- a/views/includes/home/monitoring-table.pug
+++ b/views/includes/home/monitoring-table.pug
@@ -11,7 +11,9 @@ mixin statuscake-signup
         li 5 minutes check rate
         li 50 monitors
         li 1 location
-        li Content matching
+        li
+          span Content matching&nbsp;
+            i.material-icons.material-icon--pricing-table(data-toggle="tooltip" data-placement="top" title="Check if a specific keyword exists or not exists in a web page") help
         li Shows average response time
         li Integration with email, webhooks, Twitter, Hipchat, Pushbullet, Pushover, Slack, Boxcar 2
         li
