--- a/views/home.pug
+++ b/views/home.pug
@@ -57,7 +57,7 @@ block content
                 .col-sm-12
                   h2.category__header Monitoring
                   p You don't need to worry if your website is still working when you sleep.<br>
-                    | There are automatic tools that will check it and notify you when something is wrong (website is down or gives unexpected errors).<br>
+                    | There are automatic tools that will check it and notify you when something is wrong (your website is down or has errors).<br>
                     | Check out the best #[strong free] uptime monitors.
               include includes/home/monitoring-table
           section.ssl.category
