--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,14 +26,14 @@ html(lang="en")
     //- CSS
     link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='/css/material-kit.min.css')
-    link(rel='stylesheet', href='/css/main.css')
+    link(rel='stylesheet', href='/css/main.css?version=20161030')
   body
     include includes/header
     block content
     include includes/footer
 
     //- JS
-    script(src='/js/main.min.js')
+    script(src='/js/main.min.js?version=20161030')
 
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
