--- a/views/layout.pug
+++ b/views/layout.pug
@@ -33,7 +33,7 @@ html(lang="en")
     include includes/footer
 
     //- JS
-    script(src='/js/main.min.js?version=20161030')
+    script(src='/js/main.min.js')
 
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
