Add no-follow to affiliate links

--- a/views/includes/home/domain-table.pug
+++ b/views/includes/home/domain-table.pug
@@ -1,7 +1,7 @@
 mixin namecheap-signup
-  a.btn.btn-primary.u-bold(target="_blank", href="https://www.namecheap.com/?aff=104674") Open Namecheap
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.namecheap.com/?aff=104674") Open Namecheap
 mixin 1and1-signup
-  a.btn.btn-primary.u-bold(target="_blank", href="https://www.1and1.com/com-domain?ac=OM.US.US469K02463T2103a") Open 1&1
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.1and1.com/com-domain?ac=OM.US.US469K02463T2103a") Open 1&1
 
 #domain-price.row.u-mt-medium.u-mb-medium
   .col-xs-12.col-sm-4.col-sm-offset-2
