--- a/views/includes/home/hosting-table.pug
+++ b/views/includes/home/hosting-table.pug
@@ -1,14 +1,14 @@
 //- No affiliate
 mixin amazon-signup
-  a.btn.btn-primary.u-bold(target="_blank", href="https://portal.aws.amazon.com/gp/aws/developer/registration/index.html") Open Amazon
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://portal.aws.amazon.com/gp/aws/developer/registration/index.html") Open Amazon
 //- No affiliate
 mixin heroku-signup
-  a.btn.btn-primary.u-bold(target="_blank", href="https://signup.heroku.com/") Open Heroku
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://signup.heroku.com/") Open Heroku
 mixin digitalocean-signup
-  a.btn.btn-primary.u-bold(target="_blank", href="https://www.digitalocean.com/?refcode=d71aa25b4581&utm_campaign=Referral_Invite&utm_medium=Referral_Program&utm_source=CopyPaste") Open DigitalOcean
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.digitalocean.com/?refcode=d71aa25b4581") Open DigitalOcean
 //- TODO: Add affiliate link
 mixin linode-signup
-  a.btn.btn-primary.u-bold(target="_blank", href="https://www.linode.com/?r=9a00d53b309b115b96561104e5bb88ed9ecf9293") Open Linode
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.linode.com/?r=9a00d53b309b115b96561104e5bb88ed9ecf9293") Open Linode
 mixin amazon-nostorage
   span No storage<br>
     | (from 0.1$/GB-month on #[a(target="_blank",href="https://aws.amazon.com/ebs/pricing/") EBS])
