--- a/views/includes/home/monitoring-table.pug
+++ b/views/includes/home/monitoring-table.pug
@@ -1,7 +1,7 @@
 mixin uptimerobot-signup
-  a.btn.btn-primary.u-bold(target="_blank", href="https://uptimerobot.com") Open Uptime Robot
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://uptimerobot.com") Open Uptime Robot
 mixin statuscake-signup
-  a.btn.btn-primary.u-bold(target="_blank", href="https://www.statuscake.com/") Open StatusCake
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.statuscake.com/") Open StatusCake
 
 #domain-price.row.u-mt-medium.u-mb-medium
   .col-xs-12.col-sm-4.col-sm-offset-2
