--- a/views/includes/home/monitoring-table.pug
+++ b/views/includes/home/monitoring-table.pug
@@ -1,5 +1,5 @@
 mixin uptimerobot-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://uptimerobot.com") Open Uptime Robot
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://uptimerobot.com?ref=195296") Open Uptime Robot
 mixin statuscake-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.statuscake.com/") Open StatusCake
 
