--- a/views/layout.pug
+++ b/views/layout.pug
@@ -43,7 +43,12 @@ html(lang="en")
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-85666429-1', 'auto');ga('send', 'pageview');
 
-        //- Heap Analytics - cause it's easier to use than Google
+    //- Heap Analytics - cause it's easier to use than Google
     script.
       window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(r?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","removeEventProperty","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
       heap.load("2779816653");
+
+    //- Airbrake for errors
+    script.
+      var airbrake = require('airbrake').createClient("133692", "e5ce8ef84f3887265469f8de7157f1e6");
+      airbrake.handleExceptions();
