--- a/views/faq.pug
+++ b/views/faq.pug
@@ -32,6 +32,7 @@ block content
               a.js-faq-expand-all.btn.u-mt-large.pull-right(href="#" onclick="return false;") Expand all
           section.row
             .col-sm-12
+              a.anchor--hidden#general
               h3 General questions
               .js-faq-accordion.panel-group(role="tablist" aria-multiselectable="true")
                 .panel.panel-default
