--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -3,6 +3,7 @@
 $grey: #999;
 $grey-border: rgba(153, 153, 153, .3);
 $grey-text: #212121;
+$light-grey: rgba(0, 0, 0, .5);
 $primary-blue: #03a9f4;
 $primary-text: #3c4858;
 $white: #fff;
@@ -45,6 +46,10 @@ $bigger-font: 16px;
   border: 0 !important; // Use important to make sure this will always work
 }
 
+.u-light-grey {
+  color: $light-grey !important; // Use important to make sure this will always work
+}
+
 // Pricing card
 .price {
   margin-bottom: 20px; // Add some space for mobile devices
@@ -65,6 +70,10 @@ $bigger-font: 16px;
     .no-border {
       border-bottom: 0;
     }
+
+    &.price--wider {
+      max-width: 350px;
+    }
   }
 
   &__header {
@@ -81,6 +90,7 @@ $bigger-font: 16px;
       line-height: 30px;
     }
   }
+
 }
 
 // General rules - for each website //////////////////////////////////////////
@@ -106,10 +116,12 @@ p {
     line-height: 1.4em;
     margin: 20px 0 10px;
   }
+
   &__link {
     color: $white;
     text-decoration: underline;
   }
+
   &__link:hover, &__link:active, &__link:focus {
     color: $deep-purple;
   }
@@ -197,6 +209,7 @@ p {
   position: relative;
   top: 4px;
 }
+// Files storage category ////////////////////////////////////////////////////
 // Subscribe  ////////////////////////////////////////////////////////////////
 .subscribe {
   padding-bottom: 100px;
