--- a/views/faq.pug
+++ b/views/faq.pug
@@ -113,6 +113,20 @@ block content
                   +accordion-body('domain-recommendation')
                     p When it comes to what type of domain you should choose - in 99% of cases you will be fine with #[strong .com]. It's a standard for most websites and it will allow you to avoid any kind of confusion (people will pay more attention to the website's name, not the extension, when they try to remember it, so they might automatically assume that it ends with .com). However, in some cases getting a custom domain extension might help you to distinguish yourself from others: .pizza for a pizzeria or .museum for a museum can have a very good effect.
                     p When it comes to companies - not always cheaper is better. Some companies will offer you a cheap first year but then next years will be quite expensive and moving your domain to a different company will be a hassle. If you want to validate an idea for a project, then it's fine to choose anything cheap like 1&1. If your project is successful after a year, you probably can afford to pay more or move the domain. If it isn't - well then you probably don't need that domain anymore. If you know that you want to keep the domain for longer, I would use the Namecheap - they have good prices and very good reviews.
+          section.row.u-mt-medium.u-mb-large
+            .col-sm-12
+              h3#files Files storage
+              .js-faq-accordion.panel-group(role="tablist" aria-multiselectable="true")
+                .panel.panel-default#files-infrequent
+                  +accordion-header('files-infrequent')
+                    | What is the Infrequent Access Storage?
+                  +accordion-body('files-infrequent')
+                    p Infrequent Access Storage is a perfect place to store data that you are planning to access, well, less often. The price of storing data this way is cheaper than in the Standard Storage, but the cost of putting or retrieving data is higher. Also, once you put the data in the Infrequent Storage, you will be charged for at least 30 days of storing it there (so even if you delete the file after 1 day, you will have to pay as it this file was there for 30 days). It seems like a good choice for archival blog posts or older versions of files.
+                .panel.panel-default#files-glacier
+                  +accordion-header('files-glacier')
+                    | What is the Glacier Storage?
+                  +accordion-body('files-glacier')
+                    p Glacier Storage is a good place for storing files that you probably won't need anymore, but you keep them just in case - like backups (maybe not the most fresh backups, but some older ones). Storing files in the Glacier is the cheapest option, but retrieval will be slow (unless you want to pay extra, so instead of waiting for hours, you will wait for few minutes).
   //- Modals
   section.modals
     include includes/modals/heroku
