--- a/views/home.pug
+++ b/views/home.pug
@@ -10,7 +10,7 @@ block content
           .hero__text.col-xs-12.col-sm-6.col-md-7
             h1.text-center DeployStack
             p.hero__lead Tired of comparing hosting plans, calculating the file storage cost or paying for the SSL certificates (yes, #[a.hero__link(href="#ssl") you can easily get a free SSL certificate ])? Wouldn't it be easier to just run your website using the best tools, recommended by developers around the world?<br>
-              | DeployStack is a list of the best, hand picked tools and services that you might need when launching a website (#[a.hero__link(href="/faq#general") read how we pick them]). All the information you need in one place. And forget searching for coupon codes - we got that too!
+              | DeployStack is a list of the best, hand picked tools and services that you might need when launching a website (#[a.hero__link(href="/faq#general") how we pick tools?]). All the information you need in one place. And forget searching for coupon codes - we got that too!
   main
     .main.main-raised
         .text-center
@@ -61,6 +61,20 @@ block content
                     | There are automatic tools that will check it and notify you when something is wrong (your website is down or has errors).<br>
                     | Check out the best #[strong free] uptime monitors.
               include includes/home/monitoring-table
+          section.files-storage.category
+            .container
+              .row
+                .col-xs-12.col-sm-6
+                  h2.category__header Files storage
+                  p When you ask about files storage, most people will recommend Amazon S3 and there are many good reasons for that. Not only it's one of the cheapest solutions, but it comes with additional benefits. For example, if you are using other parts of the AWS stack, transferring files between S3 and other services in the same region will usually be free (and fast, as all the traffic happens in the same data center). Also, thanks to it's huge popularity, there are plenty of libraries that will help you integrate S3 with basically any other piece of software. Apart from the standard S3 storage, AWS offers two other storage types, for files that you won't access so frequently: #[a(href="/faq#files-infrequent") Infrequent Access Storage] and #[a(href="/faq#files-glacier") Glacier Storage].
+                .col-xs-12.col-sm-6.col-md-5.col-md-offset-1
+                  include includes/home/files-storage-table
+          section.domain.category.background-inverse
+            .container
+              .row
+                .col-sm-12
+                  h2.category__header Foo Bar
+                  p Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor.
           sectionssl#ssl.ssl.category
             .container
               .row.u-mb-medium
