--- a/views/home.pug
+++ b/views/home.pug
@@ -9,8 +9,15 @@ block content
             img(src="/img/rocket.svg" alt="rocket flying out of the monitor")
           .hero__text.col-xs-12.col-sm-6.col-md-7
             h1.text-center DeployStack
-            p.hero__lead Tired of comparing hosting plans, calculating the file storage cost or paying for the SSL certificates (yes, #[a.hero__link(href="#ssl") you can easily get a free SSL certificate ])? Wouldn't it be easier to just run your website using the best tools, recommended by developers around the world?<br>
-              | DeployStack is a list of the best, hand picked tools and services that you might need when launching a website (#[a.hero__link(href="/faq#general") how we pick tools?]). All the information you need in one place. And forget searching for coupon codes - we got that too!
+            //- p.hero__lead
+            //-   span Tired of comparing hosting plans, calculating the file storage cost or paying for the SSL certificates?
+            //-   br
+            //-   span.u-mt-small DeployStack is a list of the best, hand picked tools and services that you might need when launching a website.
+            p.hero__lead Tired of comparing hosting plans, calculating the file storage cost or paying for the SSL certificates?
+            p.hero__lead DeployStack is a list of the best, hand picked tools and services that you might need when launching a website.
+            .hero__buttons.text-center
+              a.btn.btn-primary.u-bold.u-mx-small(href="#ssl") Get free SSL certificate
+              a.btn.btn-primary.u-bold.u-mx-small(href="/faq#general") How we pick tools?
   main
     .main.main-raised
         .text-center
