--- a/views/home.pug
+++ b/views/home.pug
@@ -17,7 +17,7 @@ block content
             p.hero__lead DeployStack is a list of the best, hand picked tools and services that you might need when launching a website.
             .hero__buttons.text-center
               a.btn.btn-primary.u-bold.u-mx-small(href="#ssl") Get free SSL certificate
-              a.btn.btn-primary.u-bold.u-mx-small(href="/faq#general") How we pick tools?
+              a.btn.btn-primary.u-bold.u-mx-small(href="/faq#general") How we select tools?
   main
     .main.main-raised
         .text-center
@@ -90,6 +90,8 @@ block content
                 .col-xs-12.col-sm-6
                   h2.category__header SSL certificate
                   p For a long time, the only way to get an SSL (or TLS) certificate was to pay 30$ or more per year. Fortunately, since December 2015, the Internet Security Research Group (ISRG) sponsored by many companies created the #[a(target="_blank", href='https://letsencrypt.org/') Let's Encrypt ] project and now everyone can get SSL certificates for #[strong free]. Go to the #[a(target="_blank", href='https://letsencrypt.org/') Let's Encrypt website ] and check how to install the certificate (they have #[a(target="_blank", href='https://certbot.eff.org/') instructions ] for different operating systems and web servers) or if you are using Ubuntu, check the more detailed, step-by-step tutorials from DigitalOcean (for #[a(target="_blank", href='https://www.digitalocean.com/community/tutorials/how-to-secure-apache-with-let-s-encrypt-on-ubuntu-16-04') Apache ] or #[a(target="_blank", href='https://www.digitalocean.com/community/tutorials/how-to-secure-nginx-with-let-s-encrypt-on-ubuntu-16-04') Nginx]).
+                  div
+                    a.btn.btn-primary.u-bold.u-mx-small(target="_blank", href='https://letsencrypt.org/') Open Let's Encrypt
           section.subscribe.background-inverse.background-inverse--blue
             .container
               .row
