--- a/views/includes/home/files-storage-table.pug
+++ b/views/includes/home/files-storage-table.pug
@@ -7,13 +7,13 @@ mixin amazon-signup
     .card.price
       ul.price--wider
         li.price__header.no-border Amazon S3
-        li.u-light-grey All prices in $ per GB per month
-        li Standard Storage $0.021-$0.026
-        li Infrequent Access Storage $0.0125-$0.026
-        li Glacier Storage $0.007-$0.012
-        li Transfering data out $0.05-$0.25<br>
+        li.u-light-grey Storage prices in $ per GB per month
+        li Standard Storage #[strong 0.021 - 0.026 $]
+        li Infrequent Access Storage #[strong 0.0125 - 0.026 $]
+        li Glacier Storage #[strong 0.007 - 0.012 $]
+        li Transfering data out #[strong 0.05 - 0.25 $/GB]<br>
           | First GB per month is free
-        li Free transfer to EC2 instance in the same region
+        li Free transfer to EC2 (in the same region)
         li
           a(rel="nofollow" target="_blank", href="https://aws.amazon.com/s3/pricing/") Check detailed prices
         li.no-border
