--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,6 +34,8 @@ html(lang="en")
 
     //- JS
     script(src='/js/main.min.js')
+    //- TODO: Merge me with other scripts
+    script(src='/js/lib/clipboard.min.js')
 
     //- Google Analytics
     script.
@@ -47,3 +49,15 @@ html(lang="en")
     script.
       window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(r?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","removeEventProperty","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
       heap.load("2779816653");
+
+    //- Custom scripts
+    script.
+      var clipboard = new Clipboard('.copy');
+      clipboard.on('success', function(e) {
+        console.log(e);
+        e.trigger.className = "copy copied";
+        //-Remove the class after 2 seconds
+        setTimeout(function(){
+          e.trigger.className = "copy uncopied";
+        }, 2000);
+      });
